build_error.txt
    Checking code-rag v0.1.0 (I:\01-Master_Code\Test-Labs\code-rag)
error[E0425]: cannot find value `ext` in this scope
  --> src\indexer.rs:39:78
   |
39 |         eprintln!("DEBUG: chunk_file called for {} with ext '{}'", filename, ext);
   |                                                                              ^^^ not found in this scope

error[E0425]: cannot find value `ext` in this scope
  --> src\indexer.rs:41:49
   |
41 |         let language = match Self::get_language(ext) {
   |                                                 ^^^ not found in this scope

error[E0425]: cannot find value `ext` in this scope
  --> src\indexer.rs:44:68
   |
44 |                 eprintln!("DEBUG: No language found for ext '{}'", ext);
   |                                                                    ^^^ not found in this scope

error[E0425]: cannot find value `ext` in this scope
  --> src\indexer.rs:67:59
   |
67 |         self.traverse(&root, code, filename, &mut chunks, ext, mtime);
   |                                                           ^^^ not found in this scope

warning: unused import: `std::path::Path`
 --> src\indexer.rs:1:5
  |
1 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

For more information about this error, try `rustc --explain E0425`.
warning: `code-rag` (lib) generated 1 warning
error: could not compile `code-rag` (lib) due to 4 previous errors; 1 warning emitted
